Avoiding header text truncation

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -9,3 +9,9 @@ img.step {
 	margin-right: 0 !important;
 	margin-left: 0 !important;
 }
+body .ui-li .ui-li-desc {
+	white-space: normal;
+}
+body .ui-footer .ui-title {
+	white-space: normal;
+}
